[package]
name = "relay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.4"
dotenv = "0.15.0"
ethers-core = "1.0.2"
ethers-middleware = "1.0.2"
ethers-providers = "1.0.2"
ethers-signers = "1.0.2"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.24.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
