[package]
name = "relay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
axum = {version = "0.6.4", features = ["headers"]}
dotenv = "0.15.0"
ethers = {version = "2.0.3", features = ["ws", "rustls"]}
hex = {version = "0.4.3", features = ["serde"]}
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.24.2", features = ["full", "tracing"] }
console-subscriber = "0.1.5"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = {version = "1.3.0", features = ["v4", "serde"]}
futures-util = "0.3.26"
instant = "0.1.12"
async-trait = "0.1.64"
thiserror = "1.0.38"
sqlx = { version = "0.6.2", features = [ "runtime-tokio-rustls", "mysql", "json", "migrate" ] }
axum-macros = "0.3.5"
